# RMhomework

answer/: CMakeLists.txt
answer/include/answer/: GetClickPoint.h
answer/install/: local_setup.sh  setup.sh
answer/install/answer/lib/answer/: answer  answer.py
answer/install/answer/share/answer/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
answer/log/: latest_build
answer/src/: answer.cpp
